# sphyra

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: camera.h  constants.h  renderer.h  scene.h  scenes.h  sph_cuda.h  vec3.h
src/: main.cpp
src/core/: camera.cpp  scene.cpp  scenes.cpp
src/cuda/: sph_kernels.cu
src/render/: renderer.cpp
tests/: Makefile  README.md  test_frame.cpp
